--- a/src/Components/Button/ButtonStyles.css
+++ b/src/Components/Button/ButtonStyles.css
@@ -12,6 +12,7 @@
   overflow: hidden;
   outline: none;
   margin-top: 1rem;
+  /* box-shadow: 0px 11px 59px 0 rgb(53 78 84 / 6%); */
 }
 
 .cart-button:focus {
