--- a/src/Components/Modal/styles.css
+++ b/src/Components/Modal/styles.css
@@ -1,77 +1,24 @@
 .pic-details-demo {
-  width: 50%;
-  min-width: 550px;
+  width: 100%;
+  /* min-width: 530px; */
   background: #fff;
-  border-radius: 6px;
+  border-radius: 0.3rem;
+  overflow-x: hidden;
   overflow-y: scroll;
+  box-shadow: 0px 11px 59px 0 rgb(53 78 84 / 6%);
+}
+
+@media screen and (max-width: 414px) {
+  .pic-details-demo {
+    transform: scale(0.65) translate(1.5%, -20%) !important;
+    transform-origin: left center;
+  }
 }
 
 .pic-details-demo::-webkit-scrollbar {
-  width: 20px;
   display: none;
 }
 
-.pic-details-demo-header ul li {
-  list-style: none;
-  width: 8px;
-  height: 8px;
-  display: inline-block;
-  border-radius: 4px;
-  margin: 0 5px 0 0;
-}
-
-.pic-details-demo-header ul li:nth-child(1) {
-  background: #cf3333;
-  margin-left: 3%;
-}
-
-.pic-details-demo-header ul li:nth-child(2) {
-  background: #dec811;
-}
-
-.pic-details-demo-header ul li:nth-child(3) {
-  background: #28c026;
-}
-
-.pic-details-demo-header ul li:nth-child(4) {
-  background: #fff;
-  width: 80%;
-  height: 16px;
-  vertical-align: middle;
-  margin: 0 10px;
-}
-
-.pic-details-demo-header ul li:nth-child(5),
-.pic-details-demo-header ul li:nth-child(5):before,
-.pic-details-demo-header ul li:nth-child(5):after {
-  width: 20px;
-  height: 2px;
-  background: #bababa;
-  border-radius: 2px;
-}
-
-.pic-details-demo-header ul li:nth-child(5) {
-  vertical-align: middle;
-  margin-left: 5px;
-  position: relative;
-}
-
-.pic-details-demo-header ul li:nth-child(5):before,
-.pic-details-demo-header ul li:nth-child(5):after {
-  content: '';
-  display: block;
-  position: absolute;
-}
-
-.pic-details-demo-header ul li:nth-child(5):before {
-  top: -6px;
-}
-
-.pic-details-demo-header ul li:nth-child(5):after {
-  top: 6px;
-}
-
-/* ######## END ############ */
 .pic-details-demo-title {
   width: 95%;
   margin: 20px auto;
@@ -88,12 +35,16 @@
   font-size: 12px;
 }
 
+.pic-details-demo-wrapper {
+  height: 370px !important;
+}
+
 .pic-details-demo-image-wrapper {
   position: relative;
   list-style: none;
   width: 500px;
-  height: 290px;
-  margin: auto;
+  height: 350px;
+  margin: 0 auto;
 }
 
 .pic-details-demo-image-wrapper li {
@@ -125,6 +76,7 @@
 .pic-details-demo-image-wrapper li a img {
   display: block;
   height: 100%;
+  cursor: pointer;
 }
 
 .pic-details-demo-text-wrapper {
@@ -142,7 +94,7 @@
   margin: 5px auto;
 }
 
-.pic-details-demo-text-wrapper i {
+.pic-details-demo-text-wrapper .closeIconPopUp {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -161,6 +113,11 @@
   font-size: 12px;
   margin-top: 10px;
   line-height: 16px;
+}
+
+.border-radius {
+  border-radius: 0.3rem;
+  display: inline-block;
 }
 
 @media screen and (max-width: 414px) {
