--- a/src/Components/CartTable/CartTable.module.css
+++ b/src/Components/CartTable/CartTable.module.css
@@ -60,6 +60,11 @@
   text-align: right;
 }
 
+.emptyCartStyles {
+  width: 100%;
+  display: block;
+}
+
 @media screen and (min-width: 768px) {
   .tdStyles span {
     color: #ff523b;
